--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.344.0",
     "next": "^14.1.0",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.11.2",
     "@next/bundle-analyzer": "^14.1.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
